# flatpak-sbom

./: .gitignore  CONTEXT.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: cyclonedx.rs  grype.rs  main.rs  manifest.rs  metadata.rs  ostree.rs  refname.rs  sbom.rs
tests/: cli.rs
